Fixed table horizontal scrolling problems.

--- a/css/style.css
+++ b/css/style.css
@@ -257,16 +257,17 @@ pre code
 
 table
 {
-	border: 1px solid #AAAAAA;
-	background-color: #E8E8E8;
 	border-collapse: collapse;
 	margin-top: 1.5em;
 	margin-bottom: 1.5em;
+	overflow-x: auto;
+	display: block;
 }
 
 th, td
 {
 	border: 1px solid #AAAAAA;
+	background-color: #E8E8E8;
 	padding: 0.45em 0.35em;
 }
 
